# logrin

./: .bazelignore  .bazelrc  .buildifier.json  .clang-format  .clang-tidy  .clangd  .envrc  .gitignore  .logrin-version  BUILD.bazel  CHANGELOG.md  LICENSE  MODULE.bazel  README.md  default.nix  dummy.cc  flake.nix  meson.build  meson_options.txt  renovate.json  shell.nix
.buildkite/: linux-x64.yml  pipeline.yml
.github/: CODE_OF_CONDUCT.md
.github/workflows/: CI.yaml  Linux.yaml  Release.yaml
bazel/: BUILD.bazel  cc.bzl  version.bzl
bazel/flags/: BUILD.bazel  defs.bzl
examples/console_sink/: BUILD.bazel  main.cc  meson.build
examples/http_sink/: README.md  httpServer.js  main.cc
examples/otel_sink/: BUILD.bazel  README.md  docker-compose.yml  main.cc  otel-collector-config.yaml
hack/nix/: devshell.sh
hack/pkg-config/: liblogrin.pc
include/logrin/: AsyncSink.h  BUILD.bazel  Formatter.h  LogFactory.h  LogRecord.h  Logger.h  Sink.h
include/logrin/Formatter/: Json.h  Pattern.h
include/logrin/Formatter/Pattern/: Error.h  Parser.h  Segment.h
include/logrin/Sinks/: Console.h  Http.h  OpenTelemetry.h
include/logrin/Sinks/Console/: BUILD.bazel  Formatter.h
include/logrin/Sinks/Console/Formatter/: Azalia.h  Json.h
include/logrin/bits/: Macros.h
include/logrin/detail/: BUILD.bazel  Batcher.h  config.h
logrin/: BUILD.bazel
logrin/detail/: BUILD.bazel
logrin/formatters/: BUILD.bazel
logrin/formatters/pattern/: BUILD.bazel
logrin/sinks/: BUILD.bazel
nix/: default.nix  devshell.nix  package.nix
nix/lib/: common.nix
patches/: 001_violet__remove_devdeps.patch
patches/hedron_compile_commands/: fix_assertion.patch  ignore_c_flag.patch
patches/rules_rust/: 0001-Remove-lresolv-in-darwin-and-macos-triple-mappings.patch
src/: BUILD.bazel  LogFactory.cc  LogRecord.cc  Logger.cc
src/formatters/: BUILD.bazel  Json.cc  Pattern.cc
src/formatters/pattern/: BUILD.bazel  Parser.cc  Segment.cc
src/sinks/: BUILD.bazel  Console.cc  OpenTelemetry.cc
src/sinks/console/: Azalia.cc  BUILD.bazel  Json.cc
subprojects/: .gitignore  violet.wrap
subprojects/packagefiles/violet/: panic-fix.patch
tests/: BUILD.bazel  LogFactory.test.cc  Logger.test.cc
tests/formatters/: BUILD.bazel  Pattern.test.cc
tests/sinks/: BUILD.bazel  Console.test.cc  OpenTelemetry.test.cc
tools/: bazeldist  hotpatch-release.py
