# 🐻‍❄️🏳️‍⚧️ Logrin: Modern, async-aware logging framework for C++20
# Copyright (c) 2026 Noel Towa <cutie@floofy.dev>, et al.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:cc.bzl", logrin_cc_library = "cc_library")
load("//bazel/flags:defs.bzl", "FLAGS")

refresh_compile_commands(
    name = "rcc",
)

cc_library(
    name = "include_hack",
    includes = ["include"],
    visibility = ["//:__subpackages__"],
)

# Add a "uber" library that combines everything into a single library
logrin_cc_library(
    name = "logrin",
    srcs = ["dummy.cc"],
    linkstatic = 0,
    visibility = ["//visibility:public"],
    deps = [
        "//src:async_sink",
        "//src:log_factory",
        "//src:log_record",
        "//src:logger",
        "//src:sink",
        "//src/sinks:console",
        "//src/sinks/console:azalia",
        "//src/sinks/console:json",
        "@violet//violet:macros",
    ] + select({
        "//bazel/flags:http_sink_enabled": ["//src/sinks:http"],
        "//conditions:default": [],
    }) + select({
        "//bazel/flags:otel_sink_enabled": ["//src/sinks:opentelemetry"],
        "//conditions:default": [],
    }),
)

# Alias all flags so that `@logrin//:otel_sink=True` works as well
[alias(
    name = name,
    actual = "//bazel/flags:%s" % name,
    visibility = ["//visibility:public"],
) for name in FLAGS]
