# рџђ»вЂЌвќ„пёЏрџЏіпёЏвЂЌвљ§пёЏ Logrin: Modern, async-aware logging framework for C++20
# Copyright (c) 2026 Noel Towa <cutie@floofy.dev>, et al.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("@minato//:rcc.bzl", "minato")
load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel/flags:defs.bzl", "BOOL_FLAGS")

minato(
    name = "rcc",
)

cc_library(
    name = "include_hack",
    includes = ["include"],
    visibility = ["//:__subpackages__"],
)

cc_library(
    name = "config",
    hdrs = ["//include/logrin/detail:config.h"],
    local_defines = select({
        "//bazel/flags:win32_dllexport_enabled": ["LOGRIN_WIN32_DLLEXPORT"],
        "//conditions:default": [],
    }),
    visibility = ["//:__subpackages__"],
    deps = [
        "@violet//violet:macros",
        "@violet//violet:policy_checks",
    ],
)

# Alias all flags so that `@logrin//:otel_sink=True` works as well
[alias(
    name = name,
    actual = "//bazel/flags:%s" % name,
    visibility = ["//visibility:public"],
) for name in BOOL_FLAGS.keys()]
