# рџђ»вЂЌвќ„пёЏрџЏіпёЏвЂЌвљ§пёЏ Logrin: Modern, async-aware logging framework for C++20
# Copyright (c) 2026 Noel Towa <cutie@floofy.dev>, et al.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("//bazel:cc.bzl", "logrin_cc_library")

package(
    default_visibility = ["//visibility:public"],
)

logrin_cc_library(
    name = "log_record",
    srcs = ["//src:LogRecord.cc"],
    hdrs = ["//include/logrin:LogRecord.h"],
    deps = [
        "@nlohmann_json//:json",
        "@violet//violet:source_location",
        "@violet//violet/experimental:oneof",
        "@violet//violet/support:demangle",
    ],
)

logrin_cc_library(
    name = "async_sink",
    hdrs = ["//include/logrin:AsyncSink.h"],
    deps = [
        ":log_record",
        "@violet//violet",
    ],
)

logrin_cc_library(
    name = "sink",
    hdrs = ["//include/logrin:Sink.h"],
    deps = [
        ":log_record",
        "@violet//violet",
    ],
)

logrin_cc_library(
    name = "log_factory",
    srcs = ["//src:LogFactory.cc"],
    hdrs = ["//include/logrin:LogFactory.h"],
    deps = [
        ":logger",
        "@violet//violet",
    ],
)

logrin_cc_library(
    name = "logger",
    srcs = ["//src:Logger.cc"],
    hdrs = ["//include/logrin:Logger.h"],
    deps = [
        ":async_sink",
        ":sink",
        "@violet//violet",
        "@violet//violet:source_location",
    ],
)

logrin_cc_library(
    name = "formatter",
    hdrs = ["//include/logrin:Formatter.h"],
    deps = ["@violet//violet"],
)
