# рџђ»вЂЌвќ„пёЏрџЏіпёЏвЂЌвљ§пёЏ Logrin: Modern, async-aware logging framework for C++20
# Copyright (c) 2026 Noel Towa <cutie@floofy.dev>, et al.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("//bazel:cc.bzl", "logrin_cc_library")

package(
    default_visibility = ["//visibility:public"],
)

exports_files(glob(["*.cc"]))

logrin_cc_library(
    name = "log_record",
    srcs = ["LogRecord.cc"],
    hdrs = ["//include/logrin:LogRecord.h"],
    deprecation = "as of 26.05, this target has moved to `@logrin//logrin:log_record`. It'll be removed in a 26.06 release.",
    deps = [
        "@nlohmann_json//:json",
        "@violet//violet",
        "@violet//violet:source_location",
        "@violet//violet/experimental:oneof",
        "@violet//violet/support:demangle",
    ],
)

logrin_cc_library(
    name = "async_sink",
    hdrs = ["//include/logrin:AsyncSink.h"],
    deprecation = "as of 26.05, this target has moved to `@logrin//logrin:async_sink`. It'll be removed in a 26.06 release.",
    deps = [
        ":log_record",
        "@violet//violet",
    ],
)

logrin_cc_library(
    name = "sink",
    hdrs = ["//include/logrin:Sink.h"],
    deprecation = "as of 26.05, this target has moved to `@logrin//logrin:sink`. It'll be removed in a 26.06 release.",
    deps = [
        ":log_record",
        "@violet//violet",
    ],
)

logrin_cc_library(
    name = "log_factory",
    srcs = ["LogFactory.cc"],
    hdrs = ["//include/logrin:LogFactory.h"],
    deprecation = "as of 26.05, this target has moved to `@logrin//logrin:log_factory`. It'll be removed in a 26.06 release.",
    deps = [
        ":logger",
        "@violet//violet",
    ],
)

logrin_cc_library(
    name = "logger",
    srcs = ["Logger.cc"],
    hdrs = ["//include/logrin:Logger.h"],
    deprecation = "as of 26.05, this target has moved to `@logrin//logrin:logger`. It'll be removed in a 26.06 release.",
    deps = [
        ":async_sink",
        ":sink",
        "@violet//violet",
        "@violet//violet:source_location",
    ],
)

logrin_cc_library(
    name = "formatter",
    hdrs = ["//include/logrin:Formatter.h"],
    deprecation = "as of 26.05, this target has moved to `@logrin//logrin:formatter`. It'll be removed in a 26.06 release.",
    deps = ["@violet//violet"],
)
