# рџђ»вЂЌвќ„пёЏрџЏіпёЏвЂЌвљ§пёЏ Logrin: Modern, async-aware logging framework for C++20
# Copyright (c) 2026 Noel Towa <cutie@floofy.dev>, et al.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load(":defs.bzl", "BOOL_FLAGS")

[bool_flag(
    name = name,
    build_setting_default = map.get("default", False),
    visibility = ["//visibility:public"],
) for (name, map) in BOOL_FLAGS.items()]

[config_setting(
    name = "%s_enabled" % name,
    flag_values = {("//bazel/flags:%s" % name): "True"},
) for name in BOOL_FLAGS.keys()]

[config_setting(
    name = "%s_disabled" % name,
    flag_values = {("//bazel/flags:%s" % name): "False"},
) for name in BOOL_FLAGS.keys()]
