# 🐻‍❄️🏳️‍⚧️ Logrin: Modern, async-aware logging framework for C++20
# Copyright (c) 2026 Noel Towa <cutie@floofy.dev>, et al.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("//bazel:cc.bzl", "cc_library")

cc_library(
    name = "console",
    srcs = ["Console.cc"],
    hdrs = ["//include/logrin/Sinks:Console.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//src:macros",
        "//src:sink",
        "//src/sinks/console:formatter",
        "@violet//violet",
    ],
)

cc_library(
    name = "http",
    srcs = ["Http.cc"],
    hdrs = ["//include/logrin/Sinks:Http.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//src:async_sink",
        "//src:macros",
        "@curl",
        "@violet//violet",
    ],
)

cc_library(
    name = "opentelemetry",
    srcs = ["OpenTelemetry.cc"],
    hdrs = ["//include/logrin/Sinks:OpenTelemetry.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//src:async_sink",
        "//src:macros",
        "@violet//violet",
    ],
)
