# рџђ»вЂЌвќ„пёЏрџЏіпёЏвЂЌвљ§пёЏ Logrin: Modern, async-aware logging framework for C++20
# Copyright (c) 2026 Noel Towa <cutie@floofy.dev>, et al.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("//bazel:cc.bzl", "logrin_cc_library")

package(
    default_visibility = ["//visibility:public"],
)

exports_files(glob(["*.cc"]))

logrin_cc_library(
    name = "error",
    hdrs = ["//include/logrin/Formatter/Pattern:Error.h"],
    deps = ["@violet//violet/container"],
)

logrin_cc_library(
    name = "parser",
    srcs = ["Parser.cc"],
    hdrs = ["//include/logrin/Formatter/Pattern:Parser.h"],
    deprecation = "as of 26.05, this target has moved to `@logrin//logrin/formatter/pattern:parser`. It'll be removed in a 26.06 release.",
    deps = [
        ":error",
        ":segment",
        "//src:log_record",
        "@violet//violet:strings",
        "@violet//violet/support:terminal",
    ],
)

logrin_cc_library(
    name = "segment",
    srcs = ["Segment.cc"],
    hdrs = ["//include/logrin/Formatter/Pattern:Segment.h"],
    deps = [
        ":error",
        "@violet//violet:strings",
        "@violet//violet/container",
    ],
)
